# router/routes.go
@@ -37,6 +37,8 @@ func NewRoutes(r *gin.Engine) {
 		api.PUT("/renameFile", renameFile)
 		api.PUT("/moveFile", moveFile)
 		api.PUT("/shareFile", shareFile)
-		api.PUT("/recycle", recycle)
+		api.PUT("/recycleFile", recycleFile)
+
+		api.DELETE("/deleteFile", deleteFile)
 	}
 }
